--- a/src/comonents/Bio/index.css
+++ b/src/comonents/Bio/index.css
@@ -36,3 +36,19 @@ footer{
 .h-quote{
     padding-top: 25px;
 }
+.tect-badge{
+    object-fit: cover;
+    max-width: 55% !important;
+    max-height: 55% !important;
+    margin: 5px;
+}
+.logo-tech-links{
+    z-index: 8;
+    position: absolute;
+    top: 28.5vh;
+    left: 16vw;
+    width: 70vw;
+    height: auto;
+    background-image: linear-gradient(-20deg, rgb(0, 143, 105, 0.85), rgb(200, 231, 202,0.65));
+    border: rgb(143, 188, 143, 0.75) 15px outset;
+}
