--- a/src/comonents/Bio/index.css
+++ b/src/comonents/Bio/index.css
@@ -28,7 +28,9 @@ footer{
     width: 100vw;
 }
 .navbar{
-    height: 57.5px !important
+    height: 57.5px !important;
+    width: 90vw !important;
+
 }
 .h-name{
     padding-top: 15px;
@@ -62,4 +64,41 @@ footer{
 .full-slider,
 .logo-tech-links{
     top: 220px !important
+}
+
+@media screen and (max-width: 950px){
+    #bio-pic{
+        width: 150px;
+        height: 170px;
+        object-fit: cover;
+        border-radius: 50%;
+    }
+}
+
+@media screen and (max-width: 600px){
+    #bio-pic{
+        width: 120px;
+        height: 140px;
+        object-fit: cover;
+        border-radius: 50%;
+    }
+    .h-name{
+        padding-top: 40vh;
+    }
+    h1.display-4{
+        font-size: 35px;
+        font-weight: 550 !important;
+    }
+    .h-quote,
+    .lead,
+    .quote-source{
+        padding-top: 0px;
+        font-size: 12px;
+    }
+    footer{
+        padding-top: 3px;
+        font-size: 10.5px;
+        color: rgb(6, 32, 18);
+        padding-right: 12px;
+    }
 }
