--- a/src/comonents/Bio/index.css
+++ b/src/comonents/Bio/index.css
@@ -41,6 +41,7 @@ footer{
 .tect-badge{
     object-fit: cover;
     max-width: 55% !important;
+    min-width: 50px !important;
     max-height: 55% !important;
     margin: 5px;
 }
@@ -48,7 +49,7 @@ footer{
 .logo-tech-links{
     z-index: 8;
     position: absolute;
-    left: 16vw;
+    margin: 0 auto;
     width: 70vw;
     height: auto;
     background-image: linear-gradient(-20deg, rgb(0, 143, 105, 0.85), rgb(200, 231, 202,0.65));
@@ -71,6 +72,10 @@ footer{
         width: 150px;
         height: 170px;
     }
+    #bio-text,
+    .logo-tech-links{
+        width: 85vw;
+    }
 }
 
 @media screen and (max-width: 600px){
@@ -84,6 +89,10 @@ footer{
     h1.display-4{
         font-size: 35px;
         font-weight: 550 !important;
+    }
+    #bio-text,
+    .logo-tech-links{
+        width: 92vw;
     }
     .h-quote,
     .lead,
