--- a/src/comonents/Bio/index.css
+++ b/src/comonents/Bio/index.css
@@ -101,19 +101,24 @@ footer{
         text-shadow: 0.65px 1px 1px rgb(55, 75, 49);
         font-weight: 550 !important;
     }
-    #bio-text,
     .logo-tech-links{
         width: 92vw;
         left: 5vw;
-        top: 195px;
+        top: 200px;
         border: rgb(143, 188, 143, 0.5) 5px outset;
-        background: rgba(62, 192, 138, 0.25);
+        background-image: linear-gradient(-20deg, rgb(0, 143, 105, 0.25), rgb(200, 231, 202,0.25));
+    }
+    #bio-text{
+        width: 100vw;
+        top: 195px;
+        left: 0px;
+        border: none;
+        background-image: linear-gradient(-20deg, rgb(0, 143, 105), rgb(200, 231, 202));
     }
     .lead{
         padding: 0px;
         margin: 0px;
     }
-
     .h-quote,
     .lead,
     .quote-source{
