--- a/src/comonents/Bio/index.css
+++ b/src/comonents/Bio/index.css
@@ -113,6 +113,7 @@ footer{
         top: 195px;
         left: 0px;
         border: none;
+        padding: 9px;
         background-image: linear-gradient(-20deg, rgb(0, 143, 105), rgb(200, 231, 202));
     }
     .lead{
