--- a/src/comonents/Bio/index.css
+++ b/src/comonents/Bio/index.css
@@ -102,8 +102,8 @@ footer{
         font-weight: 550 !important;
     }
     .logo-tech-links{
-        width: 92vw;
-        left: 5vw;
+        width: 100vw;
+        padding: 10px;
         top: 200px;
         border: rgb(143, 188, 143, 0.5) 5px outset;
         background-image: linear-gradient(-20deg, rgb(0, 143, 105, 0.25), rgb(200, 231, 202,0.25));
