--- a/src/comonents/Bio/index.css
+++ b/src/comonents/Bio/index.css
@@ -105,6 +105,7 @@ footer{
         width: 100vw;
         padding: 10px;
         top: 200px;
+        left: 0px;
         border: rgb(143, 188, 143, 0.5) 5px outset;
         background-image: linear-gradient(-20deg, rgb(0, 143, 105, 0.25), rgb(200, 231, 202,0.25));
     }
